Increase sidebar z-index to avoid clashes wit document elements

--- a/modules/docs/arrow-docs/docs/_sass/components/_wrapper.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_wrapper.scss
@@ -8,7 +8,7 @@
 }
 
 #sidebar-wrapper {
-    z-index: 1;
+    z-index: 11;
     position: fixed;
     left: -200px;
     width: 250px;
